@@ -1,0 +1,70 @@
+/* XPM */
+static const char * const rotate_xpm[] = {
+"16 16 50 1 0 0",
+"  c #000000",
+"! c #6E6E70",
+"# c #8C99A6",
+"$ c #929FAB",
+"% c #97A2AE",
+"& c #9AA4AF",
+"' c #9FA8B1",
+"( c #A3AAB2",
+") c #A8AEB5",
+"* c #A0A4AA",
+"+ c #A4B4C3",
+", c #A9B7C7",
+"- c #ADB9C8",
+". c #AFBBC8",
+"/ c #B2BDC9",
+"0 c #B6BEC9",
+"1 c #B8C1CA",
+"2 c #A0B0C2",
+"3 c #A6B5C7",
+"4 c #A9B7C8",
+"5 c #B0BBC8",
+"6 c #B1B9C3",
+"7 c #9EAEC1",
+"8 c #A3B4C7",
+"9 c #A7B5C7",
+": c #B4BDC9",
+"; c #AEB7C1",
+"< c #9CAEC3",
+"= c #A0B1C5",
+"> c #AAB7C8",
+"? c #A9B4BF",
+"@ c #9CAFC4",
+"A c #9EB0C5",
+"B c #A1B1C5",
+"C c #A7B6C7",
+"D c #AEBBC8",
+"E c #A6B1BD",
+"F c #9AAEC4",
+"G c #A4B4C7",
+"H c #AAB8C8",
+"I c #A1AEBB",
+"J c #91A2B6",
+"K c #8C9EB2",
+"L c #8FA0B4",
+"M c #8FA0B2",
+"N c #91A1B1",
+"O c #95A3B2",
+"P c #9AA7B5",
+"Q c #95A1AD",
+"R c None",
+"RRRRRRRRRR   RRR",
+"RRRRRRRRR R  !RR",
+"RRRRRRRR RRRR RR",
+"RRR!!!!!!!!!! RR",
+"RRR!#$%&'()*! RR",
+"RRR!+,-./01     ",
+"RRR!234-5/06   R",
+"RRR!7894-5:;! RR",
+"RR !<=89>-5?!RRR",
+"R   @AB8C>DE!RRR",
+"     FA=GCHI!RRR",
+"RR !JKLMNOPQ!RRR",
+"RR !!!!!!!!!!RRR",
+"RR RRRR RRRRRRRR",
+"RR!  R RRRRRRRRR",
+"RRR   RRRRRRRRRR"
+};
